--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ crashlytics-build.properties
 # large size font files in PlayText
 /[Aa]ssets/PlayText/Font/
 /[Aa]ssets/PlayText/Font.meta
+
+# graphs and dialogue provided by PlayText that we don't need
+/[Aa]ssets/PlayText/Graph/*
+/[Aa]ssets/PlayText/Visual Novel/Graph/*
